# Cmake-Repository

./: .gitignore
ACM_Query/: CMakeLists.txt  patch.ps1
ACM_Query/src/: atclient.cpp  atclient.h  cfclient.cpp  cfclient.h  main.cpp  ncclient.cpp  ncclient.h  qojclient.cpp  qojclient.h
TEST_v1/: CMakeLists.txt
TEST_v1/calc/: CMakeLists.txt
TEST_v1/include/: calc.h  sort.h
TEST_v1/lib/Debug/: calc.exp  calc.lib  sort.exp  sort.lib
TEST_v1/sort/: CMakeLists.txt  Maopao.cpp  Qsort.cpp
TEST_v1/test_calc/: CMakeLists.txt  tcalc.cpp
TEST_v1/test_sort/: CMakeLists.txt  tsort.cpp
test_project/: CMakeLists.txt
test_project v2/: CMakeLists.txt  main.cpp
test_project v2/lib/Debug/: calc.lib  sals.lib
test_project v3/: CMakeLists.txt  main.cpp
test_project v4/: CMakeLists.txt  main.cpp
test_project/src/: main.cpp
